src/commands/snapshots/udb__commands__info__tests__line1.snap
---
source: src/commands/info.rs
expression: s
---
./item.c:21:5

couldn't find a load segment matching the addr
