src/commands/snapshots/udb__commands__info__tests__line2.snap
---
source: src/commands/info.rs
expression: s
---
./item.c:22:17

couldn't find a load segment matching the addr
