src/commands/snapshots/udb__commands__info__tests__registers.snap
---
source: src/commands/info.rs
expression: s
---
name           hex          decimal 
----           ---          ------- 
rax              0                0 
rbp   7fffdd3b3030  140736905031728 
rbx              0                0 
rcx   55957a495db0   94100490116528 
rdi              1                1 
rdx   7fffdd3b3188  140736905032072 
rip   55957a4931d7   94100490105303 
rsi   7fffdd3b3178  140736905032056 
rsp   7fffdd3b3010  140736905031696 
r8    7ff8fc2b8f10  140707359330064 
r9    7ff8fc2d4040  140707359440960 
r10   7ff8fc2ce908  140707359418632 
r11   7ff8fc2e9660  140707359528544 
r12   7fffdd3b3178  140736905032056 
r13   55957a493500   94100490106112 
r14   55957a495db0   94100490116528 
r15   7ff8fc308040  140707359653952 

name           hex          decimal 
----           ---          ------- 
rax   55d1a7822080   94358946848896 
rbp              1                1 
rbx              0                0 
rcx   55d1a7824dc0   94358946860480 
rdi              1                1 
rdx   7ffdb3b82738  140727618643768 
rip   55d1a7822244   94358946849348 
rsi   7ffdb3b82728  140727618643752 
rsp   7ffdb3b825f8  140727618643448 
r8    7f9c70968f10  140309880540944 
r9    7f9c70984040  140309880651840 
r10   7f9c7097e908  140309880629512 
r11   7f9c70999660  140309880739424 
r12              0                0 
r13   55d1a7822080   94358946848896 
r14   55d1a7824dc0   94358946860480 
r15   7f9c709b8040  140309880864832
