src/commands/snapshots/udb__commands__info__tests__signals.snap
---
source: src/commands/info.rs
expression: s
---
SIGSEGV
sender pid  0 
sender uid  0 

SIGSEGV
sender pid  0 
sender uid  0
